Fix loading button vertical align

--- a/css/main.css
+++ b/css/main.css
@@ -265,6 +265,7 @@
 }
 .button_loading {
   font-size: 0;
+  vertical-align: middle;
 }
 .button_loading.icon::before {
   display: none;
