--- a/src/components/Button.less
+++ b/src/components/Button.less
@@ -315,6 +315,7 @@
 
   &_loading {
     font-size: 0;
+    vertical-align: middle;
 
     &.icon::before {
       display: none;
